@@ -1,3 +1,15 @@
+How to run Project? ( For Intelij idea. )
+
+1. Clone the project onto your laptop.
+2. Open the project.
+3. Fix and copy the following sentence: "--module-path "<b><i>your_java_fx_sdk_location</i></b>\lib" --add-modules javafx.controls,javafx.fxml."
+4. Go to Run > Edit Configuration (shortcut: "Alt + M"),<br> and in the VM options section, paste the sentence copied in step 3. Then click Apply.
+6. Run the project, and the game will start. 
+<br> <br> Notes :
+<br> JDK Version : 11
+
+<hr>
+
 You may click following link to watch a short video about what does this project do : 
 <br>
 https://www.linkedin.com/posts/ahmeteminsaglik_coding-developer-programing-activity-6916717936959193088-ilSz?utm_source=share&utm_medium=member_desktop
